hphp/hack/test/typecheck/enum_stringish_bad_2.php.rust_elab.exp
File "enum_stringish_bad_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
  File "enum_stringish_bad_2.php", line 9, characters 22-30:
  Expected `Stringish`
  File "enum_stringish_bad_2.php", line 4, characters 16-18:
  But got `int`
